Commit de emergencia por si el computador se echa a perder

--- a/Jupyter/execute-test1.ipynb
+++ b/Jupyter/execute-test1.ipynb
@@ -601,11 +601,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "achuntes: [3237/3332.0]\n",
+      "accuracy: 97.14885954381752\n"
+     ]
+    }
+   ],
    "source": [
-    "tol = 1 # milisegundos de tolerancia\n",
+    "tol = 1 # segundos de tolerancia\n",
     "num_aciertos = 0\n",
     "num_test = float(y_test.shape[0])\n",
     "with torch.no_grad():\n",
